--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "video.js": "^7.7.5"
+  },
+  "dependencies": {
+    "videojs-contrib-hls": "^5.15.0"
   }
 }
